# mini-task-3

./: .env.example  .gitignore  README.md  _check_db.py  docker-compose.yml  init-db.sql  main.py  pyproject.toml  sprint-3-task.txt  test_chunk.py  test_ctx.py  test_db.py  test_pipeline.py
backend/: config.py  cost.py  db.py  main.py  models.py
backend/benchmark/: __init__.py  author_gold.py  metrics.py  queries.json  runner.py
backend/ingestion/: __init__.py  chunk_recursive.py  chunk_semantic.py  contextualize.py  download.py  embed.py  parse.py  pipeline.py  store.py
backend/retrieval/: __init__.py  fts_search.py  hybrid.py  query_rewrite.py  rerank.py  search.py  vector_search.py
backend/routes/: __init__.py  benchmark.py  ingest.py  search.py  stats.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  router.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: AppShell.tsx  Header.tsx
frontend/src/components/search/: ChunkingStrategy.tsx  EmptyState.tsx  ResultCard.tsx  ResultsHeader.tsx  ResultsList.tsx  RetrievalStrategies.tsx  SearchBar.tsx  SkeletonCard.tsx  SystemStatus.tsx  TopKControl.tsx
frontend/src/components/stats/: BenchmarkChart.tsx  BenchmarkRunButton.tsx  BenchmarkTable.tsx  CostCard.tsx  OptimizationCard.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  OptionCard.tsx  Pill.tsx  Slider.tsx  StatusDot.tsx
frontend/src/data/: mockBenchmark.ts  mockCosts.ts  mockResults.ts
frontend/src/hooks/: useSearchParams.ts
frontend/src/lib/: cn.ts
frontend/src/pages/: SearchPage.tsx  StatsPage.tsx
frontend/src/types/: index.ts
tests/: test_cost.py
